force-app/main/default/objects/MBMS_Book__c/MBMS_Book__c.object-meta.xml
<CustomObject>
    <description>This is an object for storing information about the Book.</description>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>