force-app/main/default/objects/MBMS_Book__c/fields/MBMS_Artist__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that stores a lookup to the Artist object.</description>
    <inlineHelpText>Book author.</inlineHelpText>
    <label>Artist</label>
    <referenceTo>MBMS_Artist__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>