force-app/main/default/objects/MBMS_Book__c/fields/MBMS_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Cover_Image__c</fullName>
    <description>A formula field that displays Book cover image or string value (if the cover image URL is not available).</description>
    <formula>IF(NOT(ISBLANK(MBMS_Cover_Image_URL__c)), IMAGE(MBMS_Cover_Image_URL__c, &apos;Image&apos;), &quot;Book cover image is not available.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cover image of the Book.</inlineHelpText>
    <label>Cover Image</label>
    <type>Text</type>
</CustomField>