force-app/main/default/objects/MBMS_Book__c/fields/MBMS_Cover_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Cover_Image_URL__c</fullName>
    <description>A field that stores a cover image URL of the Book.</description>
    <inlineHelpText>URL of the Book cover image.</inlineHelpText>
    <label>Cover Image URL</label>
    <type>Url</type>
</CustomField>