force-app/main/default/objects/MBMS_Book__c/fields/MBMS_Title__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Title__c</fullName>
    <description>A field that stores a title of the Book.</description>
    <inlineHelpText>Title of the Book.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>